fix transform css on safari, form label [#91757318]

--- a/source/stylesheets/base.sass
+++ b/source/stylesheets/base.sass
@@ -50,6 +50,7 @@ html, body, .container, .main, #scroller
     left: 50%
     top: 50%
     color: #333
+    -webkit-transform: translate(-50%, -50%)
     transform: translate(-50%, -50%)
 
 // === Features Section ===
@@ -113,6 +114,7 @@ html, body, .container, .main, #scroller
   position: fixed
   left: 50%
   top: 50%
+  -webkit-transform: translate(-50%, -50%)
   transform: translate(-50%, -50%)
   z-index: 1
   h1
@@ -177,6 +179,7 @@ html, body, .container, .main, #scroller
   position: absolute
   left: 51.5%
   top: 36%
+  -webkit-transform: translate(-50%, -50%)
   transform: translate(-50%, -50%)
 
 .pin-1
@@ -414,12 +417,6 @@ input
   color: white
   border: 2px solid white
   background-color: transparent
-
-input[type="text"],
-input[type="email"],
-textarea
-  color: black
-  background-color: white
 
 .submit-message
   display: none
