--- a/source/stylesheets/form.sass
+++ b/source/stylesheets/form.sass
@@ -23,6 +23,10 @@ form
   #mce-responses > .response
     margin-bottom: 12px
 
+  .mc-field-group
+    label
+      display: none
+
 /*
  *
  * float label
@@ -30,18 +34,7 @@ form
  */
 
 .js-float-label-wrapper
-  label
-    color: black
-
   &.focused,
   &.populated 
     label
-      font-size: initial
       margin-bottom: 0px
-    input
-      height: initial
-      min-height: 60px
-    input, 
-    textarea
-      padding-top: 2.5em
-      padding-bottom: 1em
